--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
+
     <application
+        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -16,7 +21,7 @@
             android:name=".post_method.PostActivity"
             android:exported="false" />
         <activity
-            android:name=".get_method.GetActivity"
+            android:name=".get_method.view.GetActivity"
             android:exported="false" />
         <activity
             android:name=".main_activity.MainActivity"
@@ -30,3 +35,4 @@
     </application>
 
 </manifest>
+
