--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,8 +9,15 @@ appcompat = "1.7.0"
 material = "1.12.0"
 activity = "1.8.0"
 constraintlayout = "2.1.4"
+retrofit_version = "2.9.0"
+converter-gson-version = "2.9.0"
+gson-version = "2.10.1"
+
 
 [libraries]
+gson-google = { group = "com.google.code.gson", name = "gson", version.ref = "gson-version" }
+retrofit-converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "converter-gson-version" }
+retrofit-squareup = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit_version" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
